= Changelog

All notable changes to this project will be documented in this file.

The format is based on http://keepachangelog.com/en/1.0.0/[Keep a Changelog] and this project follows the rules of 
http://semver.org/spec/v2.0.0.html[Semantic Versioning].


== 11.0.0 - TBD

=== Removed

- `com.opentext.ia.sdk.client.api.ArchiveClient.query(SearchQuery, String, String, int)`
- `com.opentext.ia.yaml.configuration.ObjectConfiguration.canConfigureObject()` 



== 10.1.0 - 2018-04-11

=== Added

- `ZipConfiguration` now accepts a `ZipCustomization` 



== 10.0.6 - 2018-04-09

=== Fixed

- Wrap all exceptions that indicate a YAML syntax error in `YamlSyntaxErrorException` 



== 10.0.5 - 2018-04-03

=== Fixed

- Fixed `ZipConfiguration` when using properties in `includes` 



== 10.0.4 - 2018-03-28

=== Fixed

- Fixed serialization of YAML 



== 10.0.3 - 2018-03-28

=== Fixed

- Fixed serialization of YAML 



== 10.0.2 - 2018-03-27

=== Fixed

- Fixed normalization of YAML configuration 



== 10.0.1 - 2018-03-27

=== Fixed

- Fix in `ZipConfiguration` when recursively including files outside the tree where the root YAML file lives



== 10.0.0 - 2018-03-26

=== Removed

- `ConfigurationBuilder.withJobDefinition()`


=== Added

- Added `ZipBuilder`
- Support additional binary formats during YAML normalization: `custom`, `pdf`


=== Fixed

- Some fixes in `ZipConfiguration` (which now uses the new `ZipBuilder`)



== 9.16.0

WARNING: Version 9.16.0 violated semantic versioning and should have been 10.0.0.




== 9.15.0 - 2018-03-19

=== Added

- Added support for binary resources in YAML: during normalization these are not inlined. Use `binary: true` to 
indicate a binary resource, or use a `format` or file extension that is considered binary. For now, only `zip` is 
supported



== 9.14.1 - 2018-03-14

=== Fixed

- During YAML normalization, pattern matching with wildcards now correctly handles characters with special meaning in
regular expressions


