@@ -8,6 +8,7 @@ buildscript {
   dependencies {
     classpath 'io.codearte.gradle.nexus:gradle-nexus-staging-plugin:0.11.0'
     classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.4'
+    classpath 'gradle.plugin.com.github.spotbugs:spotbugs-gradle-plugin:1.6.1'
   }
 }
 
@@ -127,11 +128,12 @@ subprojects {
     ignoreFailures = false
   }
 
-  apply plugin: 'findbugs'
-  findbugs {
-    toolVersion = '3.0.1'
-    excludeFilter = rootProject.file('config/findbugs_filter.xml')
+  apply plugin: 'com.github.spotbugs'
+  spotbugs {
+    reportLevel = 'low'
+    toolVersion = '3.1.3'
     ignoreFailures = false
+    excludeFilter = rootProject.file('config/findbugs_filter.xml')
   }
 
   apply from: rootProject.file('jdepend.gradle')
